# HSAJVM

./: CMakeLists.txt  Makefile  README.txt  Stack.cpp  TODO.txt  Vortrag_Gliederung.txt  compile.txt  constants.h  frame.cpp  frame.h  hsajvm.cpp  interpreter.cpp  interpreter.h  javaclass.cpp  javaclass.h  opcodes.h  stack.h  structures.h  utils.h
resources/: Simple.java
test/: Blinky.java  Hallo.java  test.txt  testStack.cpp
